Bug 1513674 - Remove nsIMemoryReporter from fixed-length prefix. r=gcp

Right now, now matter which SafeBrowsing protocol we use (V2 or V4), we
always use variable-length prefix set to store prefixes. Since
nsUrlClassifierPrefixSet is a member of VariableLengthPrefixSet and it
is never used alone, we can remove nsIMemoryReporter from it to prevent
calculating the same memory report twice.

Differential Revision: https://phabricator.services.mozilla.com/D81171